project(cdtext)
add_subdirectory(minikin)
add_library(cdtext
    androidbidi.cc
    textdirectionheuristics.cc
    measuredparagraph.cc
    measuredtext.cc
    linebreaker.cc
    layout.cc
    staticlayout.cc
    boringlayout.cc
    dynamiclayout.cc
    precomputedtext.cc
    textpaint.cc
    textutils.cc
    textline.cc
    )
target_link_libraries(cdtext minikin)

target_include_directories(
    cdtext
    PRIVATE
    BEFORE
    ${PROJECT_SOURCE_DIR}/minikin/include/myicu
    ${PROJECT_SOURCE_DIR}/minikin/include
    ${PROJECT_SOURCE_DIR}/minikin/libs
    ${PROJECT_SOURCE_DIR}
    ${PROJECT_SOURCE_DIR}/..
    ${CMAKE_BINARY_DIR}/include
    ${CMAKE_BINARY_DIR}/include/gui
    ${HARFBUZZ_INCLUDE_DIRS}
    ${FRIBIDI_INCLUDE_DIRS}
    ${FREETYPE_INCLUDE_DIRS}
    ${CAIRO_INCLUDE_DIRS}
    )
add_executable(texttest texttest.cc)
target_include_directories(texttest
    PRIVATE
    BEFORE
    ${PROJECT_SOURCE_DIR}/minikin/include/myicu
    ${PROJECT_SOURCE_DIR}/minikin/include
    ${PROJECT_SOURCE_DIR}/minikin/libs
    ./
    ${PROJECT_SOURCE_DIR}
    ${PROJECT_SOURCE_DIR}/..
    ${CMAKE_BINARY_DIR}/include
    ${CMAKE_BINARY_DIR}/include/gui
    ${HARFBUZZ_INCLUDE_DIRS}
    ${FRIBIDI_INCLUDE_DIRS}
    ${FREETYPE_INCLUDE_DIRS}
    ${CAIRO_INCLUDE_DIRS}
    )
target_link_libraries(texttest
    minikin
    cdtext
    cdroid
    ${HARFBUZZ_LIBRARIES}
    ${FRIBIDI_LIBRARIES}
    ${FREETYPE_LIBRARIES}
    ${CAIRO_LIBRARIES}
)
